# Isa-Mini

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  COPYRIGHT  MS_Test.thy  Minilang.thy  Minilang.unicode.thy  Minilang_Base.thy  Proof_Shell.thy  ROOT  Readme.md  TODO.md  debug_AoA_launcher.py  pyproject.toml  setup.py  statistics.py  test_AoA.py  test_simplify.thy  translator.py
.github/workflows/: release-conda.yml
Agent/: .env.example  Minilang_Agent.thy  Minilang_Agent.unicode.thy  Minilang_Agent_Server.thy  Minilang_Agent_Test.thy  Minilang_AoA.thy  Minilang_AoA.unicode.thy  Minilang_AoA_Server.thy  Minilang_AoA_Test.thy  README.md  ScratchInfraStudy.thy  ScratchOfIntWritability.thy  ScratchSufficesRepro.thy  TODO  agent.ML  agent.old.ML  agent_hint.ML  agent_packer.ML  agent_server.ML  debug_launcher.py  helper.ML  model_AoA.ML  preprocess.ML  pyproject.toml  pyrightconfig.json  requirements.txt  tactic.ML  test.py  test_langchain.py
Agent/AoA_REPL/: Minilang_AoA_App.thy  ROOT  aoa_repl_app.ML
Agent/Injector/: Minilang_Agent_Injector.thy  ROOT
Agent/IsaMini_Agent/: IsaMini_Agent.py  driver.py  xxx.py
Agent/IsaMini_Agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Agent/IsaMini_Agent/drivers/: EchoDebugger.py  Gemini.py  GeminiSO.py  Gemini_structured_generation.py  Gemini_yuzhi.py  Langchain.py
Agent/IsaMini_Agent/drivers/AoA/: __init__.py  helper.py  model.py  toplevel.py
Agent/IsaMini_Agent/models/: common.py  test.py
Agent/IsaMini_Agent/prompts/: SS_model.trash.json  gemini.json  gemini.md  gemini_structural_output.json  gemini_structural_output_stage1.md  gemini_structural_output_stage2.md  gemini_yuzhi.md
Agent/IsaMini_Agent_AoA/: __init__.py  abstract_demon.yml  minilang.py  model.py  toplevel.py
Agent/IsaMini_Agent_AoA/tools/: edit.json
Agent/IsaMini_Agent_old/: __init__.py
Agent/IsaMini_Agent_old/drivers/: EchoDebugger.py  Gemini.py  Gemini_structured_generation.py  Gemini_xiaokun.py  Gemini_yuzhi.py
Agent/IsaMini_Agent_old/prompts/: SS_model.json  demo.md  gemini_structural_output_stage1.md  gemini_xiaokun.md  semiformal_novelty.md
Agent/IsaMini_MCP/: __init__.py  requirements.txt
Agent/IsaMini_MCP/tools/: edit.json
Agent/Test/: Test001.thy  Test_Preprocess.thy
AoA/: README.md
IsaMini/: IsaMini.py  REPL.py  __init__.py  main.py
IsaMini/AoA/: AGENTS.md  CLAUDE.md  HARDCODED_MESSAGES.md  OpenAI_Codex_API_driver_plan.md  Readme.md  TODO.md  config.py  driver_anthropic.py  driver_api.py  driver_claude_code.py  driver_codex.py  driver_gemini.py  driver_openai.py  driver_openai_api.py  helper.py  language_model_driver.py  loop_detection_plan.md  mcp_http_server.py  model.py  prompts.py  proof_cache.py  retrieval.py  task.py  test.py  test_cache_reuse.py  test_claude_code_error_classifier.py  test_ensure_semantic_db.py  test_fact_name_validation.py  test_interrupt.py  test_local_step_between.py  test_query_warning_unicode.py  test_replace_interaction.py  test_warn_to_isabelle.py  toplevel.py  web_terminal.py
IsaMini_Agent_AoA/: Readme.md  TODO.md  driver_claude_code.py  helper.py  linked_list.py  mcp_http_server.py  model.py  prompts.py  retrieval.py  test.py  test_cache_reuse.py  toplevel.py  web_terminal.py
IsaMini_Agent_AoA/Tests/: AmendHaveToConjI.yml  AmendInductionDiscardedCtxt.yml  AmendLeafToNonLeaf.yml  AmendMultiSequence.yml  AmendQ6Preservation.yml  AmendSingleKeepsChildren.yml  AutoIntroQ7Inject.yml  AutoIntroQ7Skip.yml  BatchAmendMulti.yml  BatchCase1Reject.yml  BatchFill_HaveObvious.yml  BatchInsertBefore.yml  Branch1.yml  BranchPartialProofs.yml  CaseSplit.yml  CaseSplitNestedProofAllCases.yml  CaseSplit_AmendReconcile_Drop.yml  CaseSplit_AmendReconcile_ExactMatch.yml  CaseSplit_AmendReconcile_Rematch.yml  CaseSplit_Bool.yml  CaseSplit_InteractiveVars.yml  CaseSplit_MapCase.yml  CaseSplit_MapCaseAmend.yml  CaseSplit_MapCaseDrop.yml  CaseSplit_MapCaseMixedDrop.yml  CaseSplit_MapCaseMixedPick.yml  CaseSplit_MapCaseSingleton.yml  CaseSplit_NestedCaseNameShadow.yml  CaseSplit_NestedSkolem.yml  CaseSplit_Pair_N1_Keep.yml  CaseSplit_Pair_N1_MidProof.yml  CaseSplit_Pair_N1_OverSupply.yml  CaseSplit_Pair_N1_Replace.yml  CaseSplit_Quickview.yml  CaseSplit_ReservedName_Rejected.yml  CaseSplit_VarNames_AllCases.yml  CaseSplit_VarNames_MultiVar.yml  CaseSplit_VarNames_Rename.yml  CcontrIntroMatch.yml  Chaining.yml  (+256 more)
IsaMini_Agent_AoA/assets/: isabelle-fun-definition.md
IsaMini_Agent_AoA/tools/: cc_answer.jsonc  cc_delete.jsonc  cc_edit copy.jsonc  cc_edit.jsonc  cc_semantic_search.jsonc  cc_semantic_search_single.jsonc  show_retrieval_db.py
IsaMini_AoA/: abstract_demon.yml  driver_api.py  driver_claude_code.py  driver_codex.py  driver_openai.py  mcp_http_server.py  model.py  prompts.py  retrieval.py  test.py  test_cache_reuse.py  toplevel.py
Isa_Mini/: Isa_Mini.py  __init__.py  main.py
REPL/: Minilang_Top.thy  ROOT
Test/: Ball_InstUniv_Test.thy  Chaining_Test.thy  Clarsimp_Tac_Test.thy  Concat_Statement_Test.thy  Constraints_Demo.thy  Consumes_Missing_Fact_Test.thy  Consumes_Validation_Test.thy  Deep_Destruct_Prem_Test.thy  Define_Suc_Conflict_Test.thy  Define_Suc_NumberTheory_Test.thy  Dest_Rules_Demo.thy  Dump_Sym_Rules.thy  Dump_Sym_Rules_Complex.thy  Dump_Sym_Rules_MBP.thy  FactByName_Where_Test.thy  Fun_In_Proof_Test.thy  Fun_Termination_Examples.thy  Induct_HO_Unif_Probe.thy  Inductive_Cases_Simps_Demo.thy  Inst_Universal_Quantifiers_Test.thy  MS_Test.thy  Mod5_Transition_Test.thy  Multiset_Determination_Test.thy  Schematic_Inst_Error_Probe.thy  Structured_Statement_Test.thy  Sturm_Backend_Test.thy  Sturm_CodeReflect_Test.thy  Sturm_NBE_Full_Test.thy  Sturm_NBE_Test.thy  Sturm_Static_Test.thy  Sturm_Test.thy  Sym_Rules_Test.thy  TestInferInst.thy  Test_ArgsVar_Token.thy  Test_CaseSplit_Penetrate_Scratch.thy  Test_Define_Facts_Visible.thy  Test_DiagnoseRuleVsGoal.thy  Test_Explain_Term_Printer.thy  Test_Infra_Session_Prefixes.thy  Test_InstUniv_Comprehensive.thy  (+26 more)
Test_InfraFilter/: Test_LTE_InfraFilter.thy
conda/: recipe.yaml
doc/: Interfaces.md  Language and Protocol.md  Readme.md
(+981 files in other folders)
