[build-system]
# setup.py drops IsaMini.AoA's pytest modules from the wheel; 77 is the first
# setuptools that reads `license` below as an SPDX expression rather than free-form
# text. Under build isolation pip fetches the latest anyway, which is why the old
# floor of 42 never failed.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IsaMini"
# Read from ./VERSION rather than written here, because there are now two consumers:
# the wheel and the conda recipe (conda/recipe.yaml, fed by release-conda.yml). Two
# independent literals for one number is how they drift, and the drift is silent --
# a conda package whose version disagrees with the dist-info it installs.
#
# NOT to be confused with IsaMini/REPL.py's VERSION, which is a wire-protocol
# handshake constant compared against the server's; bumping the package must not
# touch it, even though the two happen to have coincided in the past.
dynamic = ["version"]
description = "Isabelle/Minilang"
# The file is Readme.md. setuptools does not error on a readme it cannot find --
# it silently emits METADATA with no body, and the PyPI page renders blank.
readme = "Readme.md"
license = "LGPL-2.1-or-later"
# The GNU convention for a library under the LGPL 2.1: COPYING carries the ordinary
# GPL (v2, the one LGPL-2.1 section 3 lets a recipient convert to) and COPYING.LIB the
# Lesser one. Both ship, because a recipient cannot exercise that conversion right
# without the GPL text. The repo previously carried the LGPL-3/GPL-3 pair under the
# LGPL-3 filename COPYING.LESSER, which contradicted this very line.
license-files = ["COPYING", "COPYING.LIB", "COPYRIGHT"]
authors = [
    { name="Qiyuan Xu", email="xqyww123@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Distribution names, not import names: `Isabelle_RPC_Host` is what you import, but
# `isabelle-rpc` is what pip resolves -- the former 404s on PyPI, so the published
# 0.3.5 could never be installed. The floor is 0.3.0 because that is the only release
# under this name, and Isabelle_Semantic_Embedding already requires it.
#
# Everything here is reached by a module-level import from `IsaMini` or `IsaMini.AoA`.
# Nothing that is only reached from a driver, or only from inside a function, belongs
# in this list -- see optional-dependencies below.
dependencies = [
    "msgpack>=1.1.2",
    "isabelle-rpc>=0.3.0",
    "Isabelle_Semantic_Embedding>=0.1.0",
    "rich",  # main.py, module level
    "PyYAML>=6.0.3",
    "platformdirs>=4.9.4",
    "jsoncomment>=0.4.2",
    "claude-agent-sdk>=0.1.72",
    "zstandard>=0.23.0",
    # mcp_http_server._write_memory_tool_logic hashes the record into its universal key.
    "xxhash",
    # mcp_http_server imports both at module level, and it sits on the import path of
    # IsaMini.AoA itself: __init__ -> toplevel -> driver_claude_code:14 -> here, all
    # hard imports. Declaring them as an `mcp` extra shipped a package that
    # `pip install IsaMini` could not import.
    "mcp>=1.26.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
# The Minilang REPL client (`IsaMini.REPL`, the `IsaMini` CLI) and the AoA test
# driver wrap IsaREPL. AoA's own runtime talks to Isabelle via Isabelle_RPC_Host
# and never touches IsaREPL, so it is optional: `pip install IsaMini` gets AoA,
# `pip install IsaMini[repl]` additionally enables the CLI and test driver.
# `IsaMini/__init__.py` imports `.REPL` lazily so its absence is not an eager
# import error. No floor: no release is known to be too old.
repl = ["IsaREPL"]
# One extra per driver, each naming exactly what that driver's module-level imports
# need. `toplevel._try_import_driver` swallows the ImportError of a driver whose extra
# is absent, so an under-declared extra does not fail loudly -- it makes the driver
# vanish and surfaces much later as `Unknown driver: <name>`.
# driver_openai_api.py: the openai SDK, plus tiktoken for APIDriver_ChatGPT.estimate_tokens.
# Every driver registered there (ChatGPT, OpenAI-Codex-API, K2-Think, Chat, DeepSeekV4)
# is an openai-SDK client, even the ones whose names do not say so.
openai-api = ["openai>=2.33.0", "httpx>=0.28.1", "tiktoken"]
# driver_anthropic.py. It imports driver_api for Provider/APIDriver/the Msg types, and
# since the openai half moved to driver_openai_api that no longer drags in openai.
anthropic = ["anthropic>=0.52.0", "httpx>=0.28.1"]
api = ["IsaMini[openai-api,anthropic]"]
# There is no `gemini` extra, and toplevel.py does not register driver_gemini: the
# driver is unexercised. The module is still shipped -- install google-genai and
# uncomment the _try_import_driver line to use it.
# `web`: driver_claude_code imports web_terminal from inside a function, so aiohttp is
# genuinely optional. (There is no `mcp` extra: see mcp/uvicorn in dependencies.)
web = ["aiohttp>=3.13.5"]
# `repl` is intentionally NOT in `all`: keeping IsaREPL optional (so `pip install
# IsaMini` gives the AoA agent without it) is the whole point -- do not add it back.
# Users who want the Minilang REPL client / CLI ask for `IsaMini[repl]` explicitly.
all = ["IsaMini[api,web]"]

[project.urls]
"Homepage" = "https://github.com/xqyww123/Isa-Mini"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
include = ["IsaMini", "IsaMini.*"]

[tool.setuptools.package-data]
# tools/ holds one .json and 23 .jsonc; mcp_http_server._load_schema opens the .jsonc
# ones at import time, so `tools/*.json` alone made the installed module unimportable.
# assets/ is read by driver_claude_code._copy_skills. AoA/abstract_demon.yml is left
# out: nothing in the tree references it.
"IsaMini.AoA" = ["tools/*.json", "tools/*.jsonc", "assets/*.md"]
