[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IsaMini_AoA"
version = "0.1.0"
description = "Isabelle Proof Agent over Minilang, All over Abstraction"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name="Qiyuan Xu", email="xqyww123@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["msgpack", "Isabelle_RPC_Host", "claude-agent-sdk>=0.1.72"]

[project.urls]
"Homepage" = "https://github.com/xqyww123/Isa-Mini"

[tool.setuptools.packages.find]
include = ["IsaMini_AoA", "IsaMini_AoA.*"]

# Include data files in the package
[tool.setuptools.package-data]
IsaMini_AoA = [
    "tools/*.json"
]
